# 3dimviewer

./: .gitignore  3rdParty.txt  AUTHORS  CMakeLists.txt  NOTICE  README.md  Setup.cmake
3DimViewer/: CMakeLists.txt  ChangeLog.txt  resources.qrc
3DimViewer/doc-src/: autosegplugin.rtf  lookuptableeditorplugin.rtf  template.rtf
3DimViewer/include/: CModelVisualizer.h  CSysInfo.h  cvolumelimiterdialog.h  modelswidget.h  qtcompat.h  segmentationwidget.h
3DimViewer/install/: 3DimViewer.icns  Info.plist  LicenseFull.rtf  SegmentationPlugins.iss  SegmentationPlugins_x64.iss  addfileassoc  createbundle  createbundlefull  license_full.txt  pluginsInfo.plist
3DimViewer/locale/: dataexpressplugin-cs_cz.qm  demoplugin-cs_cz.qm  modelcreateplugin-cs_cz.qm
3DimViewer/shaders2/: lookup01.rgba  lookup03.rgba  lookup08.rgba  resize2.frag
3DimViewer/src/: cpreferencesdialog.cpp  cvolumelimiterdialog.cpp  densitywindowwidget.cpp  volumerenderingwidget.cpp
3DimViewer/src/zip/: iowin32.cpp  mztools.cpp
3DimViewer/translations/: cs_cz.ts
3DimViewer/ui/: volumerenderingwidget.ui
CMakeModules/: AddLibMacros.cmake  AddMacros.cmake  ApplicationMacros.cmake  ApplicationMacros.txt  FindBullet.cmake  FindDCMTK.cmake  FindEigen.cmake  FindEigen3.cmake  FindFlann.cmake  FindGLAD.cmake  FindGLEW.cmake  FindGridCut.cmake  FindIconv.cmake  FindMDSTk.cmake  FindOSG.cmake  FindOpenCTM.cmake  FindOpenMesh.cmake  FindOpenSSL.cmake  FindOurCURL.cmake  FindOurDCMTK.cmake  FindOurGDCM.cmake  FindOurGLEW.cmake  FindOurGLFW.cmake  FindOurOSG.cmake  FindOurOpenMesh.cmake  FindOurOpenSSL.cmake  FindOurPNG.cmake  FindOurZLIB.cmake  FindPythonCppInterop.cmake  FindTinyXML.cmake  FindTinyXML2.cmake  FindVPL.cmake  FindXlab.cmake  FindZLIB.cmake  InstallMacros.cmake  InstallMacros.txt  LibraryMacros.cmake  LibraryMacros.txt  PluginMacros.cmake  PluginMacros.txt  (+4 more)
applications/3DimViewer/: CMakeLists.txt  ChangeLog.txt  appicon.rc  dependency_manifest.txt  manifest.xml  resources.qrc  viewericon.rc
applications/3DimViewer/doc/: help.html  help_cs_cz.html
applications/3DimViewer/doc-src/: manualseg3dplugin.rtf  manualsegplugin.rtf  modelcreateplugin.rtf  regioncontrolplugin.rtf
applications/3DimViewer/doxygen/: 3DimViewer2.dox  3DimViewer3.dox  3DimViewer4.dox
applications/3DimViewer/include/: AppConfigure.h  AppVersion.h  C3DimApplication.h  CAppExamination.h  CCustomUI.h  CDataInfoDialog.h  CDicomTransferDialog.h  CFilterDialog.h  CModelVisualizer.h  CModelVisualizerEx.h  CPreviewDialog.h  CPreviewDialogData.h  CRegion3DPreviewManager.h  CRegion3DPreviewVisualizer.h  CSysInfo.h  CZipLoader.h  Signals.h  cinfodialog.h  cpreferencesdialog.h  cseriesselectiondialog.h  cvolumelimiterdialog.h  cvolumerendererwindow.h  densitywindowwidget.h  mainwindow.h  modelswidget.h  orthosliceswidget.h  qtcompat.h  segmentationwidget.h  volumerenderingwidget.h
applications/3DimViewer/include/zip/: ioapi.h  iowin32.h  zip.h
applications/3DimViewer/install/: 3DimViewer.iss  3DimViewer.pkgproj  3DimViewerFull.iss  3DimViewerFull_x64.iss  3DimViewer_x64.iss  3dim_viewer_pad_file.html  3dim_viewer_pad_file.xml  3rdParty.txt  License.rtf  Welcome.rtf  createpkg  license.txt  plugin_license-Czech.txt  plugin_license-Czech2.txt  plugin_license-English.txt  pluginscreatebundle  release_howto.txt
applications/3DimViewer/locale/: autosegandfilteringplugin-cs_cz.qm  autosegplugin-cs_cz.qm  cs_cz.qm  datashiftplugin-cs_cz.qm  demoplugin-cs_cz.qm  gaugeplugin-cs_cz.qm  loadpythonplugin-cs_cz.qm  lookuptableeditorplugin-cs_cz.qm  machinesegmentation-cs_cz.qm  manualseg3dplugin-cs_cz.qm  manualsegplugin-cs_cz.qm  modelcreateplugin-cs_cz.qm  notesplugin-cs_cz.qm  regionandmodelcontrol-cs_cz.qm  regionandmodelcontrolplugin-cs_cz.qm  regioncontrolplugin-cs_cz.qm  scriptvolume-cs_cz.qm  scriptvolumeplugin-cs_cz.qm  segtosmallregionsplugin-cs_cz.qm  volumepythonscriptingplugin-cs_cz.qm
applications/3DimViewer/models/: assistant_axis_x.stl  assistant_axis_y.stl  assistant_axis_z.stl  assistant_body.stl
applications/3DimViewer/pluginsd/: dummy.txt
applications/3DimViewer/python/VPLSwig/: VPLPython.py  _VPLPython.pyd
applications/3DimViewer/python/VPLSwig/Core/: Channel.py  Core.py  Geometry.py  _Channel.pyd  _Core.pyd  _Geometry.pyd
applications/3DimViewer/python/VPLSwig/Image/: IO.py  Image.py  ImageFilters.py  ImageFunctions.py  _IO.pyd  _Image.pyd  _ImageFilters.pyd  _ImageFunctions.pyd
applications/3DimViewer/python/VPLSwig/Volume/: Volume.py  VolumeFilters.py  VolumeFunctions.py  _Volume.pyd  _VolumeFilters.pyd  _VolumeFunctions.pyd
applications/3DimViewer/python/interpret/: .gitignore
applications/3DimViewer/shaders2/: add.frag  fbo.frag  fsquad.vert  lookup02.rgba  lookup04.rgba  lookup05.rgba  lookup06.rgba  lookup07.rgba  max.frag  noise.gray  resize2.frag  shade.frag  simple.vert  suma.frag  surface.frag
applications/3DimViewer/src/: CAppExamination.cpp  CCustomUI.cpp  CDataInfoDialog.cpp  CDicomTransferDialog.cpp  CFilterDialog.cpp  CModelVisualizerEx.cpp  CPreviewDialog.cpp  CRegion3DPreviewManager.cpp  CRegion3DPreviewVisualizer.cpp  CSysInfo.cpp  cinfodialog.cpp  cpreferencesdialog.cpp  cseriesselectiondialog.cpp  cvolumelimiterdialog.cpp  cvolumerendererwindow.cpp  densitywindowwidget.cpp  main.cpp  mainwindow.cpp  modelswidget.cpp  orthosliceswidget.cpp  segmentationwidget.cpp  volumerenderingwidget.cpp
applications/3DimViewer/src/zip/: ioapi.cpp  unzip.cpp  zip.cpp
applications/3DimViewer/tools/activity_logging/: logProcessing.py
applications/3DimViewer/translations/: cs_cz.ts
applications/3DimViewer/ui/: CDataInfoDialog.ui  CDicomTransferDialog.ui  CFilterDialog.ui  CPreviewDialog.ui  cinfodialog.ui  cpreferencesdialog.ui  cseriesselectiondialog.ui  cvolumelimiterdialog.ui  densitywindowwidget.ui  mainwindow.ui  modelswidget.ui  orthosliceswidget.ui  segmentationwidget.ui  volumerenderingwidget.ui
plugins/: CMakeLists.Demo  CMakeLists.Gauge  Demo.cmake  Gauge.cmake  Notes.cmake
src/: CMakeLists.3DimAdvQt  CMakeLists.3DimCore  CMakeLists.3DimCoreMedi  CMakeLists.3DimGeometry  pcheader.cpp  (+4 more)
(+553 files in other folders)
